[package]
name = "dmx-rdm-ftdi"
version = "0.0.7-alpha"
edition = "2021"
readme = "README.md"
description = "DMX-RDM driver for FTDI USB uarts."
license = "MIT OR Apache-2.0"
keywords = ["dmx-rdm"]
authors = ["TKFRvision <tkfrvision@gmx.de>"]
repository = "https://github.com/TKFRvisionOfficial/dmx-rdm-rs-drivers"
categories = ["hardware-support"]

[dependencies]
dmx-rdm = { version = "0.0.13-alpha" }
libftd2xx = "0.32"
log = { version = "0.4", optional = true }
spin_sleep = "1.2"

[features]
default = ["log"]

log = ["dep:log"]
