[package]
name = "dmx-rdm-rp2040"
version = "0.0.1-alpha"
edition = "2021"
readme = "README.md"
description = "DMX-RDM driver for RP2040/Raspberry Pi Pico."
license = "MIT OR Apache-2.0"
keywords = ["dmx-rdm"]
authors = ["TKFRvision <tkfrvision@gmx.de>"]
repository = "https://github.com/TKFRvisionOfficial/dmx-rdm-rs-drivers"
categories = ["hardware-support"]

[dependencies]
dmx-rdm = { version = "0.0.13-alpha", default-features = false }
rp2040-hal = { version = "0.10", features = [
  "rt",
  "critical-section-impl",
  "rom-func-cache",
] }
embedded-hal = "1.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = [
  "unproven",
] }
fugit = "0.3"
nb = "1.1"
defmt = { version = "0.3", optional = true }

[features]
defmt = ["dep:defmt", "dmx-rdm/defmt", "rp2040-hal/defmt"]
